# stx-test-project

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
tests/: integration_tests.rs
