[package]
name = "sxt-test-project"
version = "0.1.0"
edition = "2021"

[dependencies]
w3io-partner-space-and-time = { path = "../protocol/crates/w3io-partner-space-and-time" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"